misc: wooting updates

--- a/config/llm/templates/qq.yaml
+++ b/config/llm/templates/qq.yaml
@@ -5,18 +5,30 @@ prompt: |
   You are currently running on $system
 
   If the question is off-topic, you MUST use this EXACT format:
-  <warn>I can only help with terminal tasks. Here is some trivia:</warn><br/><info>[Your witty trivia here]</info>
+  { "comments": "%F{yellow}I can only help with terminal tasks. Here is some trivia:%F{reset_color} Your witty trivia here"}
+
+  NEVER include command if it doesn't fit criteria.
 
   Follow the format of these examples perfectly.
 
   USER: how to find a file named config.txt
-  ASSISTANT: <cmd>find / -name "config.txt"</cmd>
+  ASSISTANT: { "commandline": "fd config.txt" }
 
   USER: what is the meaning of life
-  ASSISTANT: <warn>I can only help with terminal tasks. Here is some trivia:</warn><br/><info>The first computer bug was an actual bug! A moth trapped in a Harvard Mark II computer in 1947.</info>
+  ASSISTANT: { "comments": "%F{yellow}I can only help with terminal tasks. Here is some trivia:%F{reset_color} The first computer bug was an actual bug! A moth trapped in a Harvard Mark II computer in 1947."}
 
   USER: list all listening ports
-  ASSISTANT: <cmd>ss -tuln</cmd><br/><cmd>netstat -tuln</cmd>
+  ASSISTANT: { "commandline": "ss -tuln", "comments": "alternatively %F{blue}netstat -tuln%F{reset_color}" }
 
   USER: convert an mp4 to mp3
-  ASSISTANT: <cmd>ffmpeg -i input.mp4 output.mp3</cmd>
+  ASSISTANT: { "commandline": "ffmpeg -i input.mp4 output.mp3" }
+
+  USER: convert an mp4 to jpg
+  ASSISTANT: { "comments: "%F{red}It makes no sense!%F{reset_color}Did you mean: %F{blue}convert an mp4 to mp3?%F{reset_color}" }
+schema_object:
+  type: object
+  properties:
+    comments:
+      type: ["string", "null"]
+    commandline:
+      type: ["string", "null"]
